--- a/Pages/Shared/Layout/Header.razor
+++ b/Pages/Shared/Layout/Header.razor
@@ -19,7 +19,7 @@
             <div class="panel">
                 <div class="panel__search">
                     <span id="searchLupa" class="panel__search__lupa @(SearchPanelIsActive ? "active" : string.Empty)" @onclick="async () => await ToggleSearchPanelAsync()"><img src="/icons/header/Lupa.svg" alt="Поисковая лупа" title="Поиск"></span>
-                    <input id="searchInput" class="panel__search__input @(SearchPanelIsActive ? "active" : string.Empty)" @bind="searchContent" @onblur="HideSearchPanel" placeholder="Поиск товара" type="search" aria-label="Поисковик товара по имени">
+                    <input id="searchInput" class="panel__search__input @(SearchPanelIsActive ? "active" : string.Empty)" @bind="SerachProductModelsByName" @onblur="HideSearchPanel" @onkeypress="SearchProductModelsByName" placeholder="Поиск товара" type="search" aria-label="Поисковик товара по имени">
                 </div>
                 @if (currentUserState.Identity.IsAuthenticated)
                 {
