--- a/Pages/_Imports.razor
+++ b/Pages/_Imports.razor
@@ -11,6 +11,7 @@
 @using WebStore.Pages
 @using WebStore.Pages.Account
 @using WebStore.Pages.Shared
+@using WebStore.Pages.Shared.Components
 @using WebStore.Pages.Shared.Layout
 @using System.Diagnostics
 @using Microsoft.Extensions.Logging
