Исправление везде по проекту проверки на пустоту строки + исправление неработающих ссылок в Header на каталоги

--- a/Pages/Account/Authorization/Logout.razor
+++ b/Pages/Account/Authorization/Logout.razor
@@ -8,7 +8,7 @@
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        ReturnUrl = string.IsNullOrEmpty(ReturnUrl) ? NavigationManager.BaseUri : ReturnUrl.Replace('$', '/'); // Костыль, требуется заменить символы '/' на '$' в возвращаемом URL адресе при его отправке и наоборот
+        ReturnUrl = string.IsNullOrWhiteSpace(ReturnUrl) ? NavigationManager.BaseUri : ReturnUrl.Replace('$', '/'); // Костыль, требуется заменить символы '/' на '$' в возвращаемом URL адресе при его отправке и наоборот
         await TokenAuthenticationStateService.LogoutAuthenticationStateAsync();
         NavigationManager.NavigateTo(ReturnUrl, true);
     }
