--- a/Pages/Products/ProductCard.razor.css
+++ b/Pages/Products/ProductCard.razor.css
@@ -58,20 +58,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 100%; }
+  max-width: 100%; }
 
 .images-block__secondary-images {
   width: 100%;
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-  gap: 5px; }
+  grid-gap: 10px; }
 
 .main-image__image {
   position: relative;
-  width: 100%;
-  height: 100%;
+  max-height: 600px;
+  max-width: 100%;
   top: 0;
   left: 0;
   object-fit: contain; }
@@ -91,7 +90,7 @@
   width: 600px;
   height: 600px;
   position: absolute;
-  top: -50%;
+  top: 0;
   left: 100%;
   pointer-events: none;
   margin-left: 17px;
@@ -105,8 +104,7 @@
   width: 100px;
   object-fit: contain;
   outline: 1px transparent solid;
-  cursor: pointer;
-  padding: 5px; }
+  cursor: pointer; }
   .secondary-images__image:hover {
     outline: 1px black solid; }
 
