--- a/Pages/Products/ProductCard.razor.scss
+++ b/Pages/Products/ProductCard.razor.scss
@@ -82,8 +82,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100%;
-        width: 100%;
+        max-width: 100%;
     }
 
     &__secondary-images {
@@ -91,14 +90,14 @@
         display: grid;
         justify-items: center;
         grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-        gap: 5px;
+        grid-gap: 10px;
     }
 }
 .main-image {
     &__image {
         position: relative;
-        width: 100%;
-        height: 100%;
+        max-height: 600px;
+        max-width: 100%;
         top: 0;
         left: 0;
         object-fit: contain;
@@ -120,7 +119,7 @@
         width: 600px;
         height: 600px;
         position: absolute;
-        top: -50%;
+        top: 0;
         left: 100%;
         pointer-events: none;
         margin-left: 17px;
@@ -137,7 +136,6 @@
         object-fit: contain;
         outline: 1px transparent solid;
         cursor: pointer;
-        padding: 5px;
 
         &:hover {
             outline: 1px black solid;
