Добавление необработанной админ панели + мелкая оптимизация для запросов

--- a/Pages/Account/OrderRegistration.razor
+++ b/Pages/Account/OrderRegistration.razor
@@ -4,7 +4,7 @@
 
 <section class="order-registration">
     <div class="order-registration__container">
-        @if (currentUser is null || AllPaymentMethods is null || allDeliviries is null)
+        @if (currentUser is null || AllPaymentMethods is null || allDeliveries is null)
         {
             <Loader />
         }
