Удаление всех JSON полей и изменение принципа заказа товаров

--- a/Pages/Account/Authorization/Login.razor
+++ b/Pages/Account/Authorization/Login.razor
@@ -26,7 +26,7 @@
                 </div>
                 <label class="form__check-box"><input class="check-box__input" @bind-value="LoginViewModel.Remember" type="checkbox" aria-label="Чек-бокс запомнить пользователя или нет" /><span class="check-box__fake-input"></span>Запомнить меня</label>
                 <span class="form__disclaimer">Выполняя вход вы соглашаетесь с <a href="/rules/privacy" aria-label="Перейти на страницу политики конфиденциальности" title="Перейти на страницу политики конфиденциальности">Политикой конфиденциальности</a> и <a href="/rules/use-conditions" aria-label="Перейти на страницу условий использования" title="Перейти на страницу условий использования">Условиями использования</a> Veco</span>
-                <button class="form__button-submut" type="submit" aria-label="Кнопка войти">Войти</button>
+                <button class="form__button-submit" type="submit" aria-label="Кнопка войти">Войти</button>
                 <a class="form__fogot-password" href="#" aria-label="Кнопка для восстановления пароля">Забыл пароль</a>
                 <a class="form__register" href="/account/authorization/register/@LoginViewModel.ReturnUrl" aria-label="Кнопка для регистрации">Зарегистрироваться</a>
                 @*<div class="form__external-logins-block external-logins-block">
