--- a/Pages/Account/Authorization/Register.razor.scss
+++ b/Pages/Account/Authorization/Register.razor.scss
@@ -98,7 +98,7 @@
         }
     }
 
-    &__button-submut {
+    &__button-submit {
         color: white;
         padding: 1.165em 0em;
         border-radius: 5px;
