--- a/Pages/Products/ProductCatalog.razor.scss
+++ b/Pages/Products/ProductCatalog.razor.scss
@@ -74,7 +74,7 @@
         }
     }
 
-    &__submut-button {
+    &__submit-button {
         margin-top: auto;
     }
 }
@@ -287,7 +287,7 @@
     &__sizes-filter-block {
     }
 
-    &__submut-button {
+    &__submit-button {
         width: 100%;
         padding: 15px;
         background-color: black;
