--- a/Pages/Account/Authorization/Register-confirm.razor.scss
+++ b/Pages/Account/Authorization/Register-confirm.razor.scss
@@ -65,7 +65,7 @@
           display: inline-block;
        }
     }
-    &__button-submut {
+    &__button-submit {
        padding: 0.6em 1em;
        color: white;
        background-color: black;
