--- a/Pages/Account/Authorization/Register.razor
+++ b/Pages/Account/Authorization/Register.razor
@@ -33,7 +33,7 @@
                 </div>
                 <label class="form__check-box"><input class="check-box__input" @bind-value="RegisterViewModel.Remember" type="checkbox" aria-label="Кнопка запомнить пользователя или нет"><span class="check-box__fake-input"></span>Запомнить меня</label>
                 <span class="form__disclaimer">Регистрируясь вы соглашаетесь с <a href="/rules/privacy" aria-label="Кнопка перехода на страницу политики конфиденциальности">Политикой конфиденциальности</a> и <a href="/rules/use-conditions" aria-label="Кнопка перехода на страницу условий использования">Условиями использования</a> Veco</span>
-                <button class="form__button-submut" type="submit" aria-label="Кнопка для регистрации нового пользователя">Зарегистрироваться</button>
+                <button class="form__button-submit" type="submit" aria-label="Кнопка для регистрации нового пользователя">Зарегистрироваться</button>
                 <a class="form__login" href="/account/authorization/login/@RegisterViewModel.ReturnUrl" aria-label="Кнопка для перехода на страницу входа пользователя">Войти</a>
                 @*<div class="form__external-logins-block external-logins-block">
                         <span class="external-logins-block__title">Зарегистрироваться с помощью</span>
