--- a/Pages/Account/Authorization/Register.razor.css
+++ b/Pages/Account/Authorization/Register.razor.css
@@ -2,118 +2,128 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%; }
-  .register__block {
-    max-width: 400px;
-    margin: 0em auto;
-    padding: 3em 0em; }
-  .register__container {
-    margin: 0em auto;
-    max-width: 100%;
-    padding: 0em 2em; }
-  ::deep .register__form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-    box-shadow: 0px 0px 1px black;
-    padding: 3em 4em;
-    border-radius: 10px; }
+  width: 100%;
+}
+.register__block {
+  max-width: 400px;
+  margin: 0em auto;
+  padding: 3em 0em;
+}
+.register__container {
+  margin: 0em auto;
+  max-width: 100%;
+  padding: 0em 2em;
+}
+::deep .register__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  box-shadow: 0px 0px 1px black;
+  padding: 3em 4em;
+  border-radius: 10px;
+}
 
 .form__logo {
   object-fit: contain;
   width: 7em;
-  height: 7em; }
-
+  height: 7em;
+}
 .form__title {
   text-align: center;
   text-transform: uppercase;
   margin-bottom: 1em;
   font-weight: 600;
-  font-size: 20px; }
-
+  font-size: 20px;
+}
 .form__errors-block {
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: 0.5em; }
-
+  gap: 0.5em;
+}
 .form__error {
   display: inline-block;
   color: red;
   line-height: 1.3em;
-  text-align: justify; }
-
+  text-align: justify;
+}
 .form__email-block {
   position: relative;
-  width: 100%; }
-
+  width: 100%;
+}
 .form__password-block {
   margin-top: 0.7em;
   position: relative;
-  width: 100%; }
-
+  width: 100%;
+}
 .form__password-confirm-block {
   margin-top: 0.7em;
   position: relative;
-  width: 100%; }
-
+  width: 100%;
+}
 ::deep .form__check-box {
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 0.5em;
-  margin-bottom: 0; }
-
+  margin-bottom: 0;
+}
 .form__disclaimer {
   text-align: center;
-  line-height: 1.3em; }
-  .form__disclaimer a {
-    color: #919191; }
-    .form__disclaimer a:hover {
-      color: #b6b6b6; }
-
-.form__button-submut {
+  line-height: 1.3em;
+}
+.form__disclaimer a {
+  color: #919191;
+}
+.form__disclaimer a:hover {
+  color: #b6b6b6;
+}
+.form__button-submit {
   color: white;
   padding: 1.165em 0em;
   border-radius: 5px;
   background-color: black;
   min-width: 100px;
-  width: 100%; }
-
+  width: 100%;
+}
 .form__fogot-password {
-  color: #919191; }
-  .form__fogot-password:hover {
-    color: #b6b6b6; }
-
+  color: #919191;
+}
+.form__fogot-password:hover {
+  color: #b6b6b6;
+}
 .form__login {
   color: #919191;
-  cursor: pointer; }
-  .form__login:hover {
-    color: #b6b6b6; }
-
+  cursor: pointer;
+}
+.form__login:hover {
+  color: #b6b6b6;
+}
 .form__external-logins-block {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 0.5em;
-  width: 100%; }
+  width: 100%;
+}
 
 ::deep .email-block__input {
   border-radius: 5px;
   box-shadow: 0px 0px 1px black;
   padding: 1em 1em;
   min-width: 100px;
-  width: 100%; }
-  ::deep .email-block__input.invalid {
-    box-shadow: 0px 0px 1px red;
-    border: 1px red solid; }
-
+  width: 100%;
+}
+::deep .email-block__input.invalid {
+  box-shadow: 0px 0px 1px red;
+  border: 1px red solid;
+}
 .email-block__label {
   color: #65657b;
   left: 14px;
@@ -123,13 +133,15 @@
   position: absolute;
   transform-origin: 0 50%;
   transition: transform 200ms, color 200ms;
-  top: 16px; }
-  .email-block__label.shift {
-    transition: 0.3s all ease;
-    position: absolute;
-    top: 0;
-    transform: translateY(-10px);
-    background-color: white; }
+  top: 16px;
+}
+.email-block__label.shift {
+  transition: 0.3s all ease;
+  position: absolute;
+  top: 0;
+  transform: translateY(-10px);
+  background-color: white;
+}
 
 ::deep .password-block__input {
   border-radius: 5px;
@@ -137,11 +149,12 @@
   padding: 1em 1em;
   min-width: 100px;
   width: 100%;
-  padding-right: 2.8em; }
-  ::deep .password-block__input.invalid {
-    box-shadow: 0px 0px 1px red;
-    border: 1px red solid; }
-
+  padding-right: 2.8em;
+}
+::deep .password-block__input.invalid {
+  box-shadow: 0px 0px 1px red;
+  border: 1px red solid;
+}
 ::deep .password-block__label {
   color: #65657b;
   left: 14px;
@@ -151,14 +164,15 @@
   position: absolute;
   transform-origin: 0 50%;
   transition: transform 200ms, color 200ms;
-  top: 16px; }
-  ::deep .password-block__label.shift {
-    transition: 0.3s all ease;
-    position: absolute;
-    top: 0;
-    transform: translateY(-10px);
-    background-color: white; }
-
+  top: 16px;
+}
+::deep .password-block__label.shift {
+  transition: 0.3s all ease;
+  position: absolute;
+  top: 0;
+  transform: translateY(-10px);
+  background-color: white;
+}
 .password-block__control {
   cursor: pointer;
   position: absolute;
@@ -167,71 +181,81 @@
   display: inline-block;
   width: 27px;
   height: 27px;
-  background: url("../icons/login/Eye.svg") center/contain no-repeat; }
-  .password-block__control.view {
-    position: absolute;
-    top: 9.5px;
-    right: 11px;
-    display: inline-block;
-    width: 27px;
-    height: 27px;
-    background: url("../icons/login/Slash-eye.svg") center/contain no-repeat; }
-
+  background: url("../icons/login/Eye.svg") center/contain no-repeat;
+}
+.password-block__control.view {
+  position: absolute;
+  top: 9.5px;
+  right: 11px;
+  display: inline-block;
+  width: 27px;
+  height: 27px;
+  background: url("../icons/login/Slash-eye.svg") center/contain no-repeat;
+}
 .password-block__meter {
   display: none;
   width: 100%;
   height: 6.5px;
-  margin-top: 0.5em; }
-  .password-block__meter.show {
-    display: block; }
-  .password-block__meter.simple {
-    background-color: red; }
-  .password-block__meter.medium {
-    background-color: orange; }
-  .password-block__meter.high-medium {
-    background-color: yellow; }
-  .password-block__meter.strong {
-    background-color: green; }
-
+  margin-top: 0.5em;
+}
+.password-block__meter.show {
+  display: block;
+}
+.password-block__meter.simple {
+  background-color: red;
+}
+.password-block__meter.medium {
+  background-color: orange;
+}
+.password-block__meter.high-medium {
+  background-color: yellow;
+}
+.password-block__meter.strong {
+  background-color: green;
+}
 .password-block__meter-label {
   font-size: 14px;
   margin-top: 0.3em;
-  display: none; }
-  .password-block__meter-label.show {
-    display: block; }
+  display: none;
+}
+.password-block__meter-label.show {
+  display: block;
+}
 
 .check-box__input {
-  display: none; }
-
+  display: none;
+}
 .check-box__fake-input {
   position: relative;
   display: inline-block;
   width: 20px;
   height: 20px;
   box-shadow: 0px 0px 1px black;
-  border-radius: 1px; }
-  .check-box__fake-input::before {
-    content: '';
-    position: absolute;
-    top: 25%;
-    left: 24%;
-    transform: translate(-50%, -50%);
-    width: 11px;
-    height: 7px;
-    border-right: 3px solid black;
-    border-top: 3px solid black;
-    transform: rotate(135deg);
-    transition: 0.15s all ease;
-    opacity: 0; }
-
+  border-radius: 1px;
+}
+.check-box__fake-input::before {
+  content: "";
+  position: absolute;
+  top: 25%;
+  left: 24%;
+  transform: translate(-50%, -50%);
+  width: 11px;
+  height: 7px;
+  border-right: 3px solid black;
+  border-top: 3px solid black;
+  transform: rotate(135deg);
+  transition: 0.15s all ease;
+  opacity: 0;
+}
 .check-box__input:checked + .check-box__fake-input::before {
-  opacity: 1; }
+  opacity: 1;
+}
 
 .external-logins-block__title {
   text-align: center;
   font-size: 17px;
-  margin: 1em 0em 0.5em; }
-
+  margin: 1em 0em 0.5em;
+}
 .external-logins-block__button-provider {
   display: inline-flex;
   justify-content: center;
@@ -242,38 +266,55 @@
   box-shadow: 0px 0px 1px black;
   border-radius: 5px;
   padding: 0.5em;
-  background-color: white; }
-  .external-logins-block__button-provider img {
-    height: 2.5em;
-    width: 2.5em; }
+  background-color: white;
+}
+.external-logins-block__button-provider img {
+  height: 2.5em;
+  width: 2.5em;
+}
 
 @media (max-width: 830px) {
   .register__block {
-    padding: 1.5em 0em; }
+    padding: 1.5em 0em;
+  }
+
   .form__disclaimer {
     text-align: center;
-    line-height: 1.3em; }
-    .form__disclaimer a {
-      color: #919191; }
-      .form__disclaimer a:hover {
-        color: #919191; }
-      .form__disclaimer a:active {
-        color: #b6b6b6; }
+    line-height: 1.3em;
+  }
+  .form__disclaimer a {
+    color: #919191;
+  }
+  .form__disclaimer a:hover {
+    color: #919191;
+  }
+  .form__disclaimer a:active {
+    color: #b6b6b6;
+  }
   .form__fogot-password {
-    color: #919191; }
-    .form__fogot-password:hover {
-      color: #919191; }
-    .form__fogot-password:active {
-      color: #b6b6b6; }
+    color: #919191;
+  }
+  .form__fogot-password:hover {
+    color: #919191;
+  }
+  .form__fogot-password:active {
+    color: #b6b6b6;
+  }
   .form__login {
-    color: #919191; }
-    .form__login:hover {
-      color: #919191; }
-    .form__login:active {
-      color: #b6b6b6; } }
-
+    color: #919191;
+  }
+  .form__login:hover {
+    color: #919191;
+  }
+  .form__login:active {
+    color: #b6b6b6;
+  }
+}
 @media (max-width: 400px) {
   .register__container {
-    padding: 0em 1em; }
+    padding: 0em 1em;
+  }
   ::deep .register__form {
-    padding: 2em; } }
+    padding: 2em;
+  }
+}
