--- a/Pages/Products/ProductCard.razor
+++ b/Pages/Products/ProductCard.razor
@@ -26,7 +26,7 @@
                     <div class="images-block__secondary-images">
                         @foreach (var photo in productModel.Photos)
                         {
-                            <img class="secondary-images__image @(photo == SelectedImage ? "selected-image" : string.Empty)" src="data:image/png;base64,@Convert.ToBase64String(photo)" @onclick="() => SelectedImage = photo" aria-label="Фото модели товара @productModel.Name" alt="Фото @productModel.Name">
+                            <img class="secondary-images__image @(photo.Value == SelectedImage ? "selected-image" : string.Empty)" src="data:image/png;base64,@Convert.ToBase64String(photo.Value)" @onclick="() => SelectedImage = photo.Value" aria-label="Фото модели товара @productModel.Name" alt="Фото @productModel.Name">
                         }
                     </div>
                 </div>
@@ -64,9 +64,9 @@
                                     @foreach (var feature in productModel.Features)
                                     {
                                         <div class="blocks-features__feature">
-                                            <span class="feature__name" aria-label="Название характеристики @feature.Key">@feature.Key</span>
+                                            <span class="feature__name" aria-label="Название характеристики @feature.Name">@feature.Name</span>
                                             <span class="feature__splitter"></span>
-                                            <span class="feature__value" aria-label="Значение характеристики @feature.Key">@feature.Value</span>
+                                            <span class="feature__value" aria-label="Значение характеристики @feature.Value">@feature.Value.ToLower()</span>
                                         </div>
                                     }
                                 </div>
@@ -74,38 +74,38 @@
                         }
                     </div>
                 }
-                <div class="product-block__submut-block">
-                    <span class="submut-block__product-price" aria-label="Цена модели товара @productModel.Name">@productModel.Price.ToString("### ### ###") ₽</span>
+                <div class="product-block__submit-block">
+                    <span class="submit-block__product-price" aria-label="Цена модели товара @productModel.Name">@productModel.Price.ToString("### ### ###") ₽</span>
                     @if (userState.Identity.IsAuthenticated)
                     {
                         if (!Db.Products.Any(product => product.Article.Model.Id == productModel.Id || product.Article.Id == SelectedProductArticle.Id))
                         {
-                            <button class="submut-block__empty-product-button" type="button" disabled aria-label="Неактивная кнопка сообщающая об отсутствии товара на складе">Товара нет в наличии</button>
+                            <button class="submit-block__empty-product-button" type="button" disabled aria-label="Неактивная кнопка сообщающая об отсутствии товара на складе">Товара нет в наличии</button>
                         }
                         else
                         {
                             if (user.FavoriteList.Products.Any(favoriteProduct => favoriteProduct.Article.Id == SelectedProductArticle.Id))
                             {
-                                <button class="submut-block__remove-from-favorites-button" @onclick="RemoveProductFromFavorites" type="submit" aria-label="Кнопка для удаления артикула модели товара @SelectedProductArticle.Model.Name из избранного">Удалить из избранного</button>
+                                <button class="submit-block__remove-from-favorites-button" @onclick="RemoveProductFromFavorites" type="submit" aria-label="Кнопка для удаления артикула модели товара @SelectedProductArticle.Model.Name из избранного">Удалить из избранного</button>
                             }
                             else
                             {
-                                <button class="submut-block__add-to-favorites-button" @onclick="AddProductInFavorites" type="submit" aria-label="Кнопка для добавления артикула модели товара @SelectedProductArticle.Model.Name в избранное">Добавить в избранное</button>
+                                <button class="submit-block__add-to-favorites-button" @onclick="AddProductInFavorites" type="submit" aria-label="Кнопка для добавления артикула модели товара @SelectedProductArticle.Model.Name в избранное">Добавить в избранное</button>
                             }
-                            if (user.Cart.Products.Any(favoriteProduct => favoriteProduct.Article.Id == SelectedProductArticle.Id))
+                            if (user.Cart.Products.Any(cartProduct => cartProduct.Article.Id == SelectedProductArticle.Id))
                             {
-                                <button class="submut-block__remove-from-cart-button" @onclick="RemoveProductFromCart" type="submit" aria-label="Кнопка для удаления артикула модели товара @SelectedProductArticle.Model.Name из крозины">Удалить из корзины</button>
+                                <button class="submit-block__remove-from-cart-button" @onclick="RemoveProductFromCart" type="submit" aria-label="Кнопка для удаления артикула модели товара @SelectedProductArticle.Model.Name из крозины">Удалить из корзины</button>
                             }
                             else
                             {
-                                <button class="submut-block__add-to-cart-button" @onclick="AddProductInCart" type="submit" aria-label="Кнопка для добавления артикула модели товара @SelectedProductArticle.Model.Name в корзину">Добавить в корзину</button>
+                                <button class="submit-block__add-to-cart-button" @onclick="AddProductInCart" type="submit" aria-label="Кнопка для добавления артикула модели товара @SelectedProductArticle.Model.Name в корзину">Добавить в корзину</button>
                             }
                         }
                     }
                     else
                     {
-                        <a class="submut-block__add-to-favorites-button" href="/account/authorization/login/@NavigationManager.Uri.Replace('/', '$')" aria-label="Кнопка с переходом на страницу входа">Добавить в избранное</a>
-                        <a class="submut-block__add-to-cart-button" href="/account/authorization/login/@NavigationManager.Uri.Replace('/', '$')" aria-label="Кнопка с переходом на страницу входа">Добавить в корзину</a>
+                        <a class="submit-block__add-to-favorites-button" href="/account/authorization/login/@NavigationManager.Uri.Replace('/', '$')" aria-label="Кнопка с переходом на страницу входа">Добавить в избранное</a>
+                        <a class="submit-block__add-to-cart-button" href="/account/authorization/login/@NavigationManager.Uri.Replace('/', '$')" aria-label="Кнопка с переходом на страницу входа">Добавить в корзину</a>
                     }
                 </div>
             </div>
